# nonebot-plugin-wwgachalogs

./: .gitignore  LICENSE  README.md  pyproject.toml
nonebot_plugin_wwgachalogs/: README.md  __init__.py  config.py  db.py  gacha.py  model.py
nonebot_plugin_wwgachalogs/migrations/: 2e188b3f6e5b_first_revision.py
