[tool.poetry]
name = "nonebot-plugin-wwgachalogs"
version = "0.1.4"
description = ""
authors = ["irelia"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nonebot2 = "^2.3.1"
nonebot-adapter-onebot = "^2.4.3"
httpx = "^0.27.0"
sqlalchemy = "^2.0.30"
nonebot-plugin-orm = {extras = ["aiosqlite"], version = "^0.7.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
